updated index background on css

--- a/public/index.html
+++ b/public/index.html
@@ -11,19 +11,19 @@
 <header>
   <!-- Background image -->
     <div class="background">
-        <img src="assets/img/Strive Homepage.jpg" id="hp-pic" alt="background image with strive rite logo and kids cleaning" image" id="bg-img" class="background img-responsive"/>
+        <img src="assets/images/Strive Homepage.jpg" id="hp-pic" alt="background image with strive rite logo and kids cleaning" image" id="bg-img" class="background img-responsive"/>
     </div>
 <!-- Text -->
 
     <div class="container">
         <div id="hp-text">
             <div class="col-sm-10">
-                <h2 class="centered welcome">Welcome! Strive Rite is a task manager for parents. It is proven that kids who do chores learn responsibility and gain important life skills that will serve them well throughout their lives.</h2>
+                <h4 class="centered welcome">Welcome! Strive Rite is a task manager for parents. It is proven that kids who do chores learn responsibility and gain important life skills that will serve them well throughout their lives.</h4>
                 <hr class="my-4">
-                <h2 class="centered welcome">Create a responsibilities chart to keep track of all the tasks for your children. Be sure to input a value for each task and Strive Rite will keep log your child's progress and earnings as they work toward some of their favorite things</h2>
+                <h4 class="centered welcome">Create a responsibilities chart to keep track of all the tasks for your children. Be sure to input a value for each task and Strive Rite will keep log your child's progress and earnings as they work toward some of their favorite things</h4>
                 <hr class="my-4">
            
-                <h2 class="centered welcome">Click the 'Get Started' button to begin setting up your chart.</h2>
+                <h4 class="centered welcome">Click the 'Get Started' button to begin setting up your chart.</h4>
                 <br>
                 <a class="btn btn-danger btn-lg centered" src="login.html" role="button">Get Started</a>
             </div>
