--- a/public/signup.html
+++ b/public/signup.html
@@ -2,137 +2,140 @@
 <html lang="en">
 
 <head>
-  <title>Passport Authentication</title>
+  <title>Strive Up!</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <link href="stylesheets/style.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-light bg-white">
     <div class="container-fluid">
-      <div class="navbar-header">
-      </div>
+      <a class="navbar-brand" href="#">
+        <img src="./assets/images/Strive Rite.png" alt="Strive Rite Logo"width="150" class="height-auto">
+      </a>
     </div>
   </nav>
-  <div class="container">
+  <div class="container mt-3">
     <div class="row">
-      <div class="col-md-9 bg-warning px-5 borderTopExtraLight">
+      <div class="col-12 col-sm-12 col-md-9 bg-warning px-5 borderTopExtraLight">
         <img id="signUpLogo" src="./assets/images/Strive Rite.png">
-        <h4 class="d-flex justify-content-center">responsibility the fun way</h4>
+        <h4 class="text-center">responsibility the fun way</h4>
       
         <div class="row bg-light rounded-top borderTopSides">
-          <div class="col-md-12 d-flex justify-content-center">
+          <div class="col-12 col-sm-12 col-md-12 text-center">
             <h2>Welcome to strive right!</h2>
           </div>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-9 bg-light2 px-5 borderExtraLight">
-        <div class="col-md-12">
+      <div class="col-12 col-sm-12 col-md-9 bg-light2 px-5 borderExtraLight">
+        <div class="col-12 col-sm-12 col-md-12">
           <div class="row bg-light borderSides">
-            <div class="col-md-12 d-flex justify-content-center mb-4">
-              <h4>Please enter your information to create you strive rite account</h4>
+            <div class="col-12 col-sm-12 col-md-12 text-center mb-4">
+              <h4>Please enter your information to create your <span><img src="./assets/images/Strive Rite.png" class="height-auto mb-2" width="100"></span> account</h4>
             </div>
           </div>
           
           <div class="row bg-light borderSides">
-            <div class="col-md-6 d-flex justify-content-center align-items-center">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6 d-flex justify-content-center align-items-center">
               <h1>An image goes here</h1>
             </div>
-            <div class="col-md-6">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6">
               <form class="signup">
                 <div class="row g-3 align-items-center">
-                  <div class="col-2 text-end">
+                  <div class="col-3 text-end">
                     <label for="inputName" class="col-form-label">Name</label>
                   </div>
-                  <div class="col-8">
+                  <div class="col-9">
                     <input type="name" id="inputName" class="form-control" placeholder="Enter your name">
                   </div>
                 </div>
                 <div class="row g-3 align-items-center">
-                  <div class="col-2 text-end">
+                  <div class="col-3 text-end">
                     <label for="inputEmail" class="col-form-label">Email Address</label>
                   </div>
-                  <div class="col-8">
+                  <div class="col-9">
                     <input type="email" id="inputEmail" class="form-control" placeholder="Enter your email address">
                   </div>
                 </div>
                 <div class="row g-3 align-items-center">
-                  <div class="col-2 text-end">
+                  <div class="col-3 text-end">
                     <label for="selectState" class="col-form-label">State</label>
                   </div>
-                  <div class="col-8">
-                    <select class="form-select" aria-label="Default select example">
-                    <option selected>Select your state</option>
-                    <option value="Alabama">Alabama</option>
-                    <option value="Alaska">Alaska</option>
-                    <option value="Arizona">Arizona</option>
-                    <option value="Arkansas">Arkansa</option>
-                    <option value="California">California</option>
-                    <option value="Colorado">Colorado</option>
-                    <option value="Connecticut">Connecticut</option>
-                    <option value="Delaware">Delaware</option>
-                    <option value="Florida">Florida</option>
-                    <option value="Georgia">Georgia</option>
-                    <option value="Hawaii">Hawaii</option>
-                    <option value="Idaho">Idaho</option>
-                    <option value="Illinois">Illinois</option>
-                    <option value="Indiana">Indiana</option>
-                    <option value="Iowa">Iowa</option>
-                    <option value="Kansas">Kansas</option>
-                    <option value="Kentucky">Kentucky</option>
-                    <option value="Louisiana">Louisiana</option>
-                    <option value="Maine">Maine</option>
-                    <option value="Maryland">Maryland</option>
-                    <option value="Massachusetts">Massachusetts</option>
-                    <option value="Michigan">Michigan</option>
-                    <option value="Minnesota">Minnesota</option>
-                    <option value="Mississippi">Mississippi</option>
-                    <option value="Missouri">Missouri</option>
-                    <option value="Montana">Montana</option>
-                    <option value="Nebraska">Nebraska</option>
-                    <option value="Nevada">Nevada</option>
-                    <option value="New Hampshire">New Hampshire</option>
-                    <option value="New Jersey">New Jersey</option>
-                    <option value="New Mexico">New Mexico</option>
-                    <option value="New York">New York</option>
-                    <option value="North Carolina">North Carolina</option>
-                    <option value="North Dakota">North Dakota</option>
-                    <option value="Ohio">Ohio</option>
-                    <option value="Oklahoma">Oklahoma</option>
-                    <option value="Oregon">Oregon</option>
-                    <option value="Pennsylvania">Pennsylvania</option>
-                    <option value="Rhode Island">Rhode Island</option>
-                    <option value="South Carolina">South Carolina</option>
-                    <option value="South Dakota">South Dakota</option>
-                    <option value="Tennessee">Tennessee</option>
-                    <option value="Texas">Texas</option>
-                    <option value="Utah">Utah</option>
-                    <option value="Vermont">Vermont</option>
-                    <option value="Virginia">Virginia</option>
-                    <option value="Washington">Washington</option>
-                    <option value="West Virginia">West Virginia</option>
-                    <option value="Wisconsin">Wisconsin</option>
-                    <option value="Wyoming">Wyoming</option>
+                  <div class="col-9 mb-2">
+                    <select class="form-select" id="selectState" aria-label="Default select example">
+                      <option selected>Select your state</option>
+                      <option value="Alabama">Alabama</option>
+                      <option value="Alaska">Alaska</option>
+                      <option value="Arizona">Arizona</option>
+                      <option value="Arkansas">Arkansa</option>
+                      <option value="California">California</option>
+                      <option value="Colorado">Colorado</option>
+                      <option value="Connecticut">Connecticut</option>
+                      <option value="Delaware">Delaware</option>
+                      <option value="Florida">Florida</option>
+                      <option value="Georgia">Georgia</option>
+                      <option value="Hawaii">Hawaii</option>
+                      <option value="Idaho">Idaho</option>
+                      <option value="Illinois">Illinois</option>
+                      <option value="Indiana">Indiana</option>
+                      <option value="Iowa">Iowa</option>
+                      <option value="Kansas">Kansas</option>
+                      <option value="Kentucky">Kentucky</option>
+                      <option value="Louisiana">Louisiana</option>
+                      <option value="Maine">Maine</option>
+                      <option value="Maryland">Maryland</option>
+                      <option value="Massachusetts">Massachusetts</option>
+                      <option value="Michigan">Michigan</option>
+                      <option value="Minnesota">Minnesota</option>
+                      <option value="Mississippi">Mississippi</option>
+                      <option value="Missouri">Missouri</option>
+                      <option value="Montana">Montana</option>
+                      <option value="Nebraska">Nebraska</option>
+                      <option value="Nevada">Nevada</option>
+                      <option value="New Hampshire">New Hampshire</option>
+                      <option value="New Jersey">New Jersey</option>
+                      <option value="New Mexico">New Mexico</option>
+                      <option value="New York">New York</option>
+                      <option value="North Carolina">North Carolina</option>
+                      <option value="North Dakota">North Dakota</option>
+                      <option value="Ohio">Ohio</option>
+                      <option value="Oklahoma">Oklahoma</option>
+                      <option value="Oregon">Oregon</option>
+                      <option value="Pennsylvania">Pennsylvania</option>
+                      <option value="Rhode Island">Rhode Island</option>
+                      <option value="South Carolina">South Carolina</option>
+                      <option value="South Dakota">South Dakota</option>
+                      <option value="Tennessee">Tennessee</option>
+                      <option value="Texas">Texas</option>
+                      <option value="Utah">Utah</option>
+                      <option value="Vermont">Vermont</option>
+                      <option value="Virginia">Virginia</option>
+                      <option value="Washington">Washington</option>
+                      <option value="West Virginia">West Virginia</option>
+                      <option value="Wisconsin">Wisconsin</option>
+                      <option value="Wyoming">Wyoming</option>
                     </select>
                   </div>
                 </div>
-                <div class="row g-3 align-items-center">
-                  <div class="col-2 text-end">
+                <div class="row g-3 align-items-center mb-2">
+                  <div class="col-3 text-end">
                     <label for="inputCity" class="col-form-label">City</label>
                   </div>
-                  <div class="col-8">
+                  <div class="col-9">
                     <input type="city" id="inputCity" class="form-control" placeholder="Enter your city">
                   </div>
                 </div>
                 <div class="row g-3 align-items-center">
-                  <div class="col-2 text-end">
+                  <div class="col-3 text-end">
                     <label for="inputPassword" class="col-form-label">Password</label>
                   </div>
-                  <div class="col-8">
+                  <div class="col-9">
                     <input type="password" id="inputPassword" class="form-control" placeholder="Enter your password">
                   </div>
                 </div>
@@ -146,8 +149,9 @@
     </div>
   </div>
 
+  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="js/signup.js"></script>
+  <script type="text/javascript" src="./js/signup.js"></script>
 
 </body>
 
