--- a/public/index.html
+++ b/public/index.html
@@ -9,17 +9,21 @@
   <link href="https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap" rel="stylesheet">
 </head>
 <body>
-  
-<header>
-  <!-- Background image -->
+<header class="row">
+        <!-- Logo --> 
+ <div id="indexLogo">
+    <img src="assets/images/Strive Rite.png" class="img-fluid indexLogo">
+</div>
+        <!-- Background image -->
     <div class="background">
-
         <img src="./assets/images/Strive Homepage.jpg" id="hp-pic" alt="background image with strive rite logo and kids cleaning" image" id="bg-img" class="background img-responsive"/>
-
     </div>
+
+</header>
+<div class="row"></div>
 <!-- Text -->
 
-    <div class="container">
+    <div class="container-fluid hp">
         <div id="hp-text">
             <div class="col-sm-10">
                 <h4 class="centered welcome">Welcome! Strive Rite is a task manager for parents. It is proven that kids who do chores learn responsibility and gain important life skills that will serve them well throughout their lives.</h4>
@@ -33,5 +37,5 @@
 
             </div>
         </div>
-    </header>
+   
     </body>
