Added relationship to child field

--- a/public/childRegistration.html
+++ b/public/childRegistration.html
@@ -135,21 +135,24 @@
                       <br>
                       <h5 class="card-title">Gender</h5>
                       <div class="input-group mb-3">
-                        <input type="text" class="form-control" aria-label="Text input with dropdown button" Style="max-width: 8rem">
+                        <input type="text" class="form-control" aria-label="Text input with dropdown button" Style="max-width: 12rem">
                         <button class="btn btn-outline-light dropdown-toggle bg-primary" type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
                         <ul class="dropdown-menu dropdown-menu-end">
                           <li><a class="dropdown-item" href="#">Female</a></li>
                           <li><a class="dropdown-item" href="#">Male</a></li>
                           <li><a class="dropdown-item" href="#">Other</a></li>
                         </ul>
-                        <input type="text" class="form-control" aria-label="Text input with dropdown button" Style="max-width: 8rem">
+                    </div>
+                    <h5 class="card-title">Relationship to Child</h5>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" aria-label="Text input with dropdown button" Style="max-width: 12rem">
                         <button class="btn btn-outline-light dropdown-toggle bg-primary" type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
                         <ul class="dropdown-menu dropdown-menu-end">
                           <li><a class="dropdown-item" href="#">Female</a></li>
                           <li><a class="dropdown-item" href="#">Male</a></li>
                           <li><a class="dropdown-item" href="#">Other</a></li>
                         </ul>
-                </div>
+                    </div>
               </div>
           </div>
           
