completed login styling and post

--- a/public/login.html
+++ b/public/login.html
@@ -46,7 +46,7 @@
               <h1>An image goes here</h1>
             </div>
             <div class="col-12 col-sm-12 col-md-12 col-lg-6">
-              <form class="signup">
+              <form class="login">
                 <div class="row g-3 align-items-center">
                 </div>
                 <div class="row g-3 align-items-center">
