Updated childRegistration htlm and css

--- a/public/childRegistration.html
+++ b/public/childRegistration.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Strive Up!</title>
+  <title>Child Registration</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -44,8 +44,8 @@
             <p>You may add up to three children to your family account.</p>
           </div>
           <div class="row bg-white borderSides">
-            <div class="card mt-3 border-primary mb-3 roundedImportant cardStyle" Style="max-width: 35rem;">
-                <div class="card-header roundedImportant bg-primary border-primary text-white" style="max-width: 100%">1. Add a child</div>
+            <div class="card mt-3 border-primary mb-3 roundedImportant cardStyle" Style="max-width: 35rem">
+                <div class="card-header rounded-top bg-primary border-primary text-white" style="max-width: 40rem">1. Add a child</div>
                 <div class="card-body text-black">
                     <h5 class="card-title">First Name</h5>
                     <div class="input-group">
@@ -143,20 +143,34 @@
                           <li><a class="dropdown-item" href="#">Other</a></li>
                         </ul>
                     </div>
-                    <h5 class="card-title">Relationship to Child</h5>
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control" aria-label="Text input with dropdown button" Style="max-width: 12rem">
-                        <button class="btn btn-outline-light dropdown-toggle bg-primary" type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
-                        <ul class="dropdown-menu dropdown-menu-end">
-                          <li><a class="dropdown-item" href="#">Female</a></li>
-                          <li><a class="dropdown-item" href="#">Male</a></li>
-                          <li><a class="dropdown-item" href="#">Other</a></li>
-                        </ul>
-                    </div>
               </div>
           </div>
-          
+          <img src="assets/images/Vacuum.png" class="rounded float-end" alt="Little girl vacuums" id="vacuumPic">
+          <img src="assets/images/Laundry.png" class="rounded float-start" alt="young boy doing Laundry" id="laundryPic">
+            <div class="card mt-3 border-primary mb-3 roundedImportant cardStyle" Style="max-width: 25rem">
+                <div class="card-header rounded-top bg-primary border-primary text-white" style="max-width: 40rem">2. Customize your child's account</div>
+                <div class="card-body text-black"></div>
+                <h5 class="card-title">Color Theme</h5>
+                <select class="form-select" aria-label="Default select example">
+                    <option selected>Select color code</option>
+                    <option value="red">Red</option>
+                    <option value="yellow">Yellow</option>
+                    <option value="green">Green</option>
+                    <option value="blue">Blue</option>
+                    <option value="grey">Grey</option>
+                    <option value="pink">Pink</option>
+                  </select>
+                  <br>
+                  <h5 class="card-title">Point System</h5>
+                <select class="form-select" aria-label="Default select example">
+                    <option selected>Select type of point system</option>
+                    <option value="money">Money</option>
+                    <option value="numbers">Number Value</option>
+                    <option value="stars">Stars</option>
+                  </select>
+                  <br>
         </div>
+        
         <div class="text-center my-1">Terms & Conditions | Privacy Policy | Support</div>
       </div>
     </div>
