Added child registration html

--- a/public/childRegistration.html
+++ b/public/childRegistration.html
@@ -45,7 +45,7 @@
           </div>
           <div class="row bg-white borderSides">
             <div class="card mt-3 border-primary mb-3 roundedImportant cardStyle" Style="max-width: 35rem">
-                <div class="card-header rounded-top bg-primary border-primary text-white" style="max-width: 40rem">1. Add a child</div>
+                <div class="card-header rounded-top bg-primary border-primary text-white">1. Add a child</div>
                 <div class="card-body text-black">
                     <h5 class="card-title">First Name</h5>
                     <div class="input-group">
@@ -170,7 +170,10 @@
                   </select>
                   <br>
         </div>
-        
+        <br>
+        <div class="d-grid d-md-flex justify-content-md-end">
+        <button type="submit" id="btnSubmit" class="btn btn-danger">submit</button>
+    </div>
         <div class="text-center my-1">Terms & Conditions | Privacy Policy | Support</div>
       </div>
     </div>
