--- a/public/createTask.html
+++ b/public/createTask.html
@@ -122,18 +122,23 @@
                 </div>
                 <br>
                 <div class="d-grid d-md-flex justify-content-md-end">
-                    <button type="submit" id="btnSubmit" class="btn btn-danger">SUBMIT</button>
+                    <button type="submit" id="btnSubmit" class="btn btn-danger">SAVE</button>
                 </div>  
                 <br>           
         </div>
+        <img src="assets/images/Trash Bag.png" class="rounded" alt="Boy trash bag" id="trashPic">
+        <br>
+        <img src="assets/images/Dusting.png" class="rounded" alt="girl dusting" id="dustingPic">
     </div>
+   
         <div class="text-center my-1">Terms & Conditions | Privacy Policy | Support</div>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
   </div>
 </div>
-  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+  
   <script type="text/javascript" src="./js/signup.js"></script>
 
 </body>
