--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     </div>
 
 </header>
-<div class="row"></div>
+<div class="row">
 <!-- Text -->
 
     <div class="container-fluid hp">
@@ -37,5 +37,7 @@
 
             </div>
         </div>
-   
+    </div>
+</div>
     </body>
+</html>
