--- a/public/taskSheet.html
+++ b/public/taskSheet.html
@@ -19,7 +19,7 @@
             <div class="task high">
                 <div class="desc">
                     <div class="title">Organize Bedroom</div>
-                    <div>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</div>
+                    <div>Task Description Here</div>
                 </div>
                 <div class="time">
                     <div class="date">Feb 1, 2021</div>
@@ -30,7 +30,7 @@
             <div class="task high">
                 <div class="desc">
                     <div class="title">Make Bed</div>
-                    <div>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</div>
+                    <div>Task Description Here</div>
                 </div>
                 <div class="time">
                     <div class="date">Feb 1, 2021</div>
@@ -41,7 +41,7 @@
             <div class="task high">
                 <div class="desc">
                     <div class="title">Vacuum Bedroom</div>
-                    <div>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</div>
+                    <div>Task Description Here</div>
                 </div>
                 <div class="time">
                     <div class="date">Feb 1, 2021</div>
@@ -52,7 +52,7 @@
             <div class="task high last">
                 <div class="desc">
                     <div class="title">Empty Trash Cans</div>
-                    <div>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</div>
+                    <div>Task Description Here</div>
                 </div>
                 <div class="time">
                     <div class="date">Feb 1, 2021</div>
@@ -66,7 +66,7 @@
             <div class="task medium">
                 <div class="desc">
                     <div class="title">Wash Dishes</div>
-                    <div>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</div>
+                    <div>Task Description Here</div>
                 </div>
                 <div class="time">
                     <div class="date">Feb 2, 2021</div>
@@ -77,7 +77,7 @@
             <div class="task medium last">
                 <div class="desc">
                     <div class="title">Vacuum Living Room</div>
-                    <div>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</div>
+                    <div>Task Description Here</div>
                 </div>
                 <div class="time">
                     <div class="date">Feb 2, 2021</div>
@@ -91,7 +91,7 @@
             <div class="task low">
                 <div class="desc">
                     <div class="title">Mow the lawn</div>
-                    <div>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</div>
+                    <div>Task Description Here</div>
                 </div>
                 <div class="time">
                     <div class="date">Feb 3, 2021</div>
@@ -102,7 +102,7 @@
             <div class="task low">
                 <div class="desc">
                     <div class="title">Windex Windows</div>
-                    <div>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</div>
+                    <div>Task Description Here</div>
                 </div>
                 <div class="time">
                     <div class="date">Feb 3, 2021</div>
@@ -113,7 +113,7 @@
             <div class="task low">
                 <div class="desc">
                     <div class="title">Clean out Closet</div>
-                    <div>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</div>
+                    <div>Task Description Here</div>
                 </div>
                 <div class="time">
                     <div class="date">Feb 3, 2021</div>
@@ -124,33 +124,11 @@
             <div class="task low">
                 <div class="desc">
                     <div class="title">Organize Garage</div>
-                    <div>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</div>
+                    <div>Task Description Here</div>
                 </div>
                 <div class="time">
                     <div class="date">Feb 3, 2021</div>
                     <div> 6:00 pm</div>
-                    <div>2 points</div>
-                </div>
-            </div>
-            <div class="task low">
-                <div class="desc">
-                    <div class="title">Wash Dog</div>
-                    <div>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</div>
-                </div>
-                <div class="time">
-                    <div class="date">Feb 3, 2021</div>
-                    <div> 6:00 pm</div>
-                    <div>2 points</div>
-                </div>
-            </div>
-            <div class="task low">
-                <div class="desc">
-                    <div class="title">Mop Floors</div>
-                    <div>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</div>
-                </div>
-                <div class="time">
-                    <div class="date">Feb 3, 2021</div>
-                    <div> 7:00 pm</div>
                     <div>2 points</div>
                 </div>
             </div>
