Fixed Task Sheet pictures

--- a/public/createTask.html
+++ b/public/createTask.html
@@ -122,12 +122,18 @@
                 </div>
                 <br>
                 <div class="d-grid d-md-flex justify-content-md-end">
-                    <button type="submit" id="btnSubmit" class="btn btn-danger">SAVE</button>
+                    <button type="submit" id="btnSave" class="btn btn-danger">SAVE</button>
                 </div>  
-                <br>           
+                <br> 
+
         </div>
+        <div class="card mt-3 mb-3" id="picCard" Style="max-width: 20rem">
+          <div class="overflow-hidden">
         <img src="assets/images/Trash Bag.png" class="rounded" alt="Boy trash bag" id="trashPic">
         <img src="assets/images/Dusting.png" class="rounded" alt="girl dusting" id="dustingPic">
+      </div>
+      </div>
+      </div>
     </div>
    
         <div class="text-center my-1">Terms & Conditions | Privacy Policy | Support</div>
