added ajax call to js file

--- a/public/productSearch.html
+++ b/public/productSearch.html
@@ -73,7 +73,7 @@
                 <div class="col-auto mb-1">
                   <input type="search" id="inputSearch" class="form-control" placeholder="Search">
                 </div>
-                <button type="button" class="btn btn-danger col-auto">
+                <button type="button" id="search" class="btn btn-danger col-auto">
                     <i class="fas fa-search"></i>
                 </button>
               </div>
