updated task sheet with checkboxes

--- a/public/taskSheet.html
+++ b/public/taskSheet.html
@@ -13,51 +13,68 @@
 
 <div class="container page-todo">
     <div class="col-sm-7 tasks">
-        <div class="task-list">
+        <div class="task-list overflow-auto">
             <h1>Robert's Tasks</h1>
             <div class="priority high"><span>high priority</span></div>
             <div class="task high">
                 <div class="desc">
                     <div class="title">Organize Bedroom</div>
                     <div>Task Description Here</div>
+                    <div class="points">2 points</div>
                 </div>
                 <div class="time">
                     <div class="date">Feb 1, 2021</div>
                     <div>3:00 pm</div>
-                    <div>2 points</div>
+                    <div class="form-check">
+                        <label class="form-check-label" for="flexCheckDefault">completed</label>
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault"/>
+                    </div>
                 </div>
+                
             </div>
             <div class="task high">
                 <div class="desc">
                     <div class="title">Make Bed</div>
                     <div>Task Description Here</div>
+                    <div class="points">2 points</div>
                 </div>
                 <div class="time">
                     <div class="date">Feb 1, 2021</div>
                     <div>4:30 pm</div>
-                    <div>2 points</div>
+                    <div class="form-check">
+                        <label class="form-check-label" for="flexCheckDefault">completed</label>
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault"/>
+                    </div>
                 </div>
             </div>
             <div class="task high">
                 <div class="desc">
                     <div class="title">Vacuum Bedroom</div>
                     <div>Task Description Here</div>
+                    <div class="points">2 points</div>
                 </div>
                 <div class="time">
                     <div class="date">Feb 1, 2021</div>
                     <div>6:00pm</div>
-                    <div>2 points</div>
+                    <div class="form-check">
+                        <label class="form-check-label" for="flexCheckDefault">completed</label>
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault"/>
+                    </div>
                 </div>
             </div>
             <div class="task high last">
                 <div class="desc">
                     <div class="title">Empty Trash Cans</div>
                     <div>Task Description Here</div>
+                    <div class="points">2 points</div>
                 </div>
                 <div class="time">
                     <div class="date">Feb 1, 2021</div>
                     <div>6:00pm</div>
-                    <div>2 points</div>
+                    <div class="form-check">
+                        <label class="form-check-label" for="flexCheckDefault">completed</label>
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault"/>
+                    </div>
                 </div>
             </div>
             <br>
@@ -67,22 +84,30 @@
                 <div class="desc">
                     <div class="title">Wash Dishes</div>
                     <div>Task Description Here</div>
+                    <div class="points">2 points</div>
                 </div>
                 <div class="time">
                     <div class="date">Feb 2, 2021</div>
                     <div> 11:00 am</div>
-                    <div>2 points</div>
+                    <div class="form-check">
+                        <label class="form-check-label" for="flexCheckDefault">completed</label>
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault"/>
+                    </div>
                 </div>
             </div>
             <div class="task medium last">
                 <div class="desc">
                     <div class="title">Vacuum Living Room</div>
                     <div>Task Description Here</div>
+                    <div class="points">2 points</div>
                 </div>
                 <div class="time">
                     <div class="date">Feb 2, 2021</div>
                     <div> 2:00 pm</div>
-                    <div>2 points</div>
+                    <div class="form-check">
+                        <label class="form-check-label" for="flexCheckDefault">completed</label>
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault"/>
+                    </div>
                 </div>
             </div>
             <br>
@@ -92,44 +117,61 @@
                 <div class="desc">
                     <div class="title">Mow the lawn</div>
                     <div>Task Description Here</div>
+                    <div class="points">2 points</div>
                 </div>
                 <div class="time">
                     <div class="date">Feb 3, 2021</div>
                     <div> 4:00 pm</div>
-                    <div>2 points</div>
+                    <div class="form-check">
+                        <label class="form-check-label" for="flexCheckDefault">completed</label>
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault"/>
+                    </div>
                 </div>
             </div>
             <div class="task low">
                 <div class="desc">
                     <div class="title">Windex Windows</div>
                     <div>Task Description Here</div>
+                    <div class="points">2 points</div>
                 </div>
                 <div class="time">
                     <div class="date">Feb 3, 2021</div>
                     <div> 5:00 pm</div>
-                    <div>2 points</div>
+                    <div class="form-check">
+                        <label class="form-check-label" for="flexCheckDefault">completed</label>
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault"/>
+                    </div>
                 </div>
             </div>
             <div class="task low">
                 <div class="desc">
                     <div class="title">Clean out Closet</div>
                     <div>Task Description Here</div>
+                    <div class="points">2 points</div>
                 </div>
                 <div class="time">
                     <div class="date">Feb 3, 2021</div>
                     <div> 5:00 pm</div>
-                    <div>2 points</div>
+                    <div class="form-check">
+                        <label class="form-check-label" for="flexCheckDefault">completed</label>
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault"/>
+                    </div>
                 </div>
             </div>
             <div class="task low">
                 <div class="desc">
                     <div class="title">Organize Garage</div>
                     <div>Task Description Here</div>
+                    <div class="points">2 points</div>
                 </div>
                 <div class="time">
                     <div class="date">Feb 3, 2021</div>
                     <div> 6:00 pm</div>
-                    <div>2 points</div>
+                    <div class="form-check">
+                        <label class="form-check-label" for="flexCheckDefault">completed</label>
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault"/>
+                    </div>
+                    
                 </div>
             </div>
             <div class="clearfix"></div>		
