added createTask js and fixed css

--- a/public/createTask.html
+++ b/public/createTask.html
@@ -49,21 +49,21 @@
                 <div class="card-body text-black">
                     <h5 class="card-title">Task Title*</h5>
                     <div class="input-group">
-                        <input type="text" aria-label="Task Title" class="form-control">
+                        <input type="text" aria-label="Task Title" class="form-control" id="task-title">
                     </div>
                     <br>
                     <h5 class="card-title">Task Description*</h5>
                     <div class="input-group">
-                        <input type="text" aria-label="Task Description" class="form-control">
+                        <input type="text" aria-label="Task Description" class="form-control" id="task-description">
                     </div>
                     <br>
                     <h5 class="card-title">Date of Completion*</h5>
                     <div class="input-group">
-                        <input type="text" aria-label="Completion" class="form-control" style="max-width: 20rem;">
+                        <input type="text" aria-label="Completion" class="form-control" style="max-width: 20rem;" id="date-complete">
                     </div>
                     <br>
                     <h5 class="card-title">Time of Completion*</h5>
-                      <select class="form-select" aria-label="Time" style="max-width: 20rem;">
+                      <select class="form-select" aria-label="Time" style="max-width: 20rem;" id="time-complete">
                           <option selected>Select time</option>
                           <option value="0600">6:00 am</option>
                           <option value="0630">6:30 am</option>
@@ -102,12 +102,12 @@
                     <br>
                     <h5 class="card-title">Point Value of Task*</h5>
                     <div class="input-group">
-                            <input type="text" aria-label="Value of Task" class="form-control" style="max-width: 20rem;">
+                            <input type="text" aria-label="Value of Task" class="form-control" style="max-width: 20rem;" id="task-value">
                     </div>
 
                     <br>
                     <h5 class="card-title">Task Priority*</h5>
-                      <select class="form-select" aria-label="Value">
+                      <select class="form-select" aria-label="Value" id="task-priority">
 
                           <option selected>Select Priority Level</option>
                           <option value="money">Low</option>
@@ -118,7 +118,7 @@
                     <br>
                     <h5 class="card-title">Assigned By*</h5>
                     <div class="input-group">
-                        <input type="text" aria-label="Value of Task" class="form-control" style="max-width: 20rem;">
+                        <input type="text" aria-label="Assigned by" class="form-control" style="max-width: 20rem;" id="assigned-by">
                     </div>
                         
                 </div>
