Added handlebars for viewing tasks

--- a/public/createTask.html
+++ b/public/createTask.html
@@ -72,7 +72,7 @@
           </div>
       <div class="row bg-white borderSides">
         <div class="card mt-3 border-primary mb-3 roundedImportant cardStyle" Style="max-width: 35rem">
-            <div class="card-header d-flex rounded-top bg-primary border-primary text-white">Create a Task</div>
+            <div class="card-header d-flex rounded-top text-white" id="grad" style="background-image: linear-gradient(angle, color-stop1, color-stop2);">Create a Task</div>
                 <div class="card-body text-black">
                     <h5 class="card-title">Task Title*</h5>
                     <div class="input-group">
