did quite a bit in productSearch page js

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
            
                 <h4 class="centered welcome">Click the 'Get Started' button to begin setting up your chart.</h4>
                 <br>
-                <a class="btn btn-danger btn-lg centered" src="login.html" role="button">Get Started</a>
+                <a class="btn btn-danger btn-lg centered" href="/login" role="button">Get Started</a>
 
             </div>
         </div>
