--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,53 @@
 <!DOCTYPE html>
 <html lang="en-us">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Strive Rite</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <title>Strive Rite</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap" rel="stylesheet">
 </head>
+
 <body>
-<header class="row">
-        <!-- Logo --> 
- <div id="indexLogo">
-    <img src="assets/images/Strive Rite.png" class="img-fluid indexLogo">
-</div>
+    <header class="row">
+        <!-- Logo -->
+        <div id="indexLogo">
+            <img src="assets/images/Strive Rite.png" class="img-fluid indexLogo">
+        </div>
         <!-- Background image -->
-    <div class="background">
-        <img src="./assets/images/Strive Homepage.jpg" id="hp-pic" alt="background image with strive rite logo and kids cleaning" image" id="bg-img" class="background img-responsive"/>
-    </div>
+        <div class="background">
+            <img src="./assets/images/Strive Homepage.jpg" id="hp-pic"
+                alt="background image with strive rite logo and kids cleaning" image" id="bg-img"
+                class="background img-responsive" />
+        </div>
 
-</header>
-<div class="row">
-<!-- Text -->
+    </header>
+    <div class="row">
+        <!-- Text -->
 
-    <div class="container-fluid hp">
-        <div id="hp-text">
-            <div class="col-sm-10">
-                <h4 class="centered welcome">Welcome! Strive Rite is a task manager for parents. It is proven that kids who do chores learn responsibility and gain important life skills that will serve them well throughout their lives.</h4>
-                <hr class="my-4">
-                <h4 class="centered welcome">Create a responsibilities chart to keep track of all the tasks for your children. Be sure to input a value for each task and Strive Rite will keep log your child's progress and earnings as they work toward some of their favorite things</h4>
-                <hr class="my-4">
-           
-                <h4 class="centered welcome">Click the 'Get Started' button to begin setting up your chart.</h4>
-                <br>
-                <a class="btn btn-danger btn-lg centered" src="login.html" role="button">Get Started</a>
+        <div class="container-fluid hp">
+            <div id="hp-text">
+                <div class="col-sm-10">
+                    <h4 class="centered welcome">Welcome! Strive Rite is a task manager for parents. It is proven that
+                        kids who do chores learn responsibility and gain important life skills that will serve them well
+                        throughout their lives.</h4>
+                    <hr class="my-4">
+                    <h4 class="centered welcome">Create a responsibilities chart to keep track of all the tasks for your
+                        children. Be sure to input a value for each task and Strive Rite will keep log your child's
+                        progress and earnings as they work toward some of their favorite things</h4>
+                    <hr class="my-4">
 
+                    <h4 class="centered welcome">Click the 'Get Started' button to begin setting up your chart.</h4>
+                    <br>
+                    <a class="btn btn-danger btn-lg centered" src="/login" role="button">Get Started</a>
+
+                </div>
             </div>
         </div>
     </div>
-</div>
-    </body>
+</body>
+
 </html>
